apps/mealie/javelin/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: recipes.wesley.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  name: http
    - host: mealie-beta.wesley.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-frontend
                port:
                  name: http
